Update manual page a little bit

--- a/txt2xls.1
+++ b/txt2xls.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "TXT2XLS" "1" "February 07, 2014" "Please install this application with setup.py" "txt2xls"
+.TH "TXT2XLS" "1" "February 07, 2014" "0.2.0" "txt2xls"
 .SH NAME
 txt2xls \- Convert raw text files into a single excel file.
 .
@@ -105,8 +105,8 @@ limiting the reading columns.
 .TP
 .B \-\-unite
 Join the columns of classified dataset with respecting
-\-\-unite\-basecolumn.The dataset is classified with
-\-\-unite\-function.
+\fI\-\-unite\-basecolumn\fP\&. The dataset is classified with
+\fI\-\-unite\-function\fP\&.
 .TP
 .BI \-\-unite\-basecolumn \ UNITE_BASECOLUMN
 An index of columns which will be used as a base
